simple-user-api/hardcode-manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-api-app-ingress
  annotations:
    nginx.kubernetes.io/ingress.class: nginx
    nginx.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: user-api-app-service
              port: 
                number: 8000
